--- a/src/components/post/style/post.css
+++ b/src/components/post/style/post.css
@@ -7,11 +7,8 @@
   padding-right: 6.6%;
 }
 
-.post__item {
-  height: 224px;
-  background: #FFFFFF;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
-  border-radius: 20px;
+.post__content {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
 .card-img {
@@ -126,19 +123,18 @@
 }
 
 .post__deadline {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  padding-bottom: 2px;
+  padding-bottom: 5px;
   float: right;
   font-size: 12px;
   font-style: normal;
   font-weight: normal;
   line-height: 12px;
   color: rgba(0, 0, 0, 0.5);
-  margin-top: 2px;
+  margin-top: 3px;
 }
 
 .post__text {
-  margin-top: 11px;
+  margin-top: 10px;
   margin-bottom: 1px;
   width: 225px;
   height: 16px;
