--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -13,25 +13,14 @@ $font-color-orange: #FD5A01;
   padding-left: 7.8%;
   padding-right: 6.6%;
 }
-.post__item{
-  height: 224px;
-  background: #FFFFFF;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
-  border-radius: 20px;
-}
+//.post__item{
+//  //height: 224px;
+//  background: #FFFFFF;
+//  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
+//  border-radius: 20px;
+//}
 .post__content{
-
-  //position: relative;
-  //&:before{
-  //  content: "";
-  //  position: absolute;
-  //  left: 0;
-  //  bottom: 0;
-  //  height: 1px;
-  //  width: 100%;
-  //  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  //  //margin-bottom: 11px;
-  //}
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 .card-img{
   width: 20px;
@@ -120,16 +109,15 @@ $font-color-orange: #FD5A01;
   //margin-left: 50px;
 }
 .post__deadline{
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  padding-bottom: 2px;
+  padding-bottom: 5px;
   float: right;
   //width: 72px;
   //height: 12px;
   @include font(12px, normal, normal, 12px, rgba(0, 0, 0, 0.5));
-  margin-top: 2px;
+  margin-top: 3px;
 }
 .post__text{
-  margin-top: 11px;
+  margin-top: 10px;
   margin-bottom: 1px;
   width: 225px;
   height: 16px;
