--- a/src/components/header/style/header.css
+++ b/src/components/header/style/header.css
@@ -25,12 +25,15 @@
 
 .nav__item {
   color: rgba(0, 0, 0, 0.5);
-  font-family: Muller;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
-  margin-right: 40px;
+  margin-right: 2em;
+}
+.nav__item:hover {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .mr-auto {
@@ -43,7 +46,6 @@
   padding: 12px 16px;
   border: 1px solid #202A49;
   border-radius: 12px;
-  font-family: Muller;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
