--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -22,12 +22,15 @@
 }
 .nav__item{
   color: rgba(0, 0, 0, 0.5);
-  font-family: Muller;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
-  margin-right: 40px;
+  margin-right: 2em;
+  &:hover{
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.5);
+  }
 }
 .mr-auto{
   margin-left: 59.75px;
@@ -38,7 +41,6 @@
   padding: 12px 16px;
   border: 1px solid #202A49;
   border-radius: 12px;
-  font-family: Muller;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
