--- a/src/components/landing-page/registrationForm/style/register.css
+++ b/src/components/landing-page/registrationForm/style/register.css
@@ -39,6 +39,11 @@
   width: 14px;
   height: 14px;
 }
+.register__exit:hover {
+  background-color: #f5f4f2;
+  box-shadow: 0 0 0 10px #f5f4f2;
+  border-radius: 50%;
+}
 
 .register__inputs {
   display: flex;
