required fields show

--- a/src/components/landing-page/registrationForm/style/register.css
+++ b/src/components/landing-page/registrationForm/style/register.css
@@ -26,7 +26,6 @@
 }
 
 .register__title {
-  font-family: Muller;
   font-style: normal;
   font-weight: 900;
   font-size: 36px;
@@ -59,7 +58,6 @@
   box-sizing: border-box;
   border-radius: 5px;
   background-color: #FFFFFF;
-  font-family: Muller;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -67,12 +65,16 @@
   color: #000000;
 }
 .register__input::placeholder {
-  font-family: Muller;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 14px;
   color: #000000;
+}
+
+.required::before {
+  content: "*";
+  color: tomato;
 }
 
 .register__checkbox {
@@ -83,7 +85,6 @@
 .register__checkbox-lbl {
   display: flex;
   align-items: center;
-  font-family: Muller;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
