--- a/src/components/post/style/post.css
+++ b/src/components/post/style/post.css
@@ -40,7 +40,7 @@
 
 .post__package-provider {
   position: absolute;
-  right: 8px;
+  right: 5%;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
