--- a/src/components/post/full-view/style/full-post.scss
+++ b/src/components/post/full-view/style/full-post.scss
@@ -6,15 +6,10 @@
   line-height: $line;
   color: $color;
 }
-.full-post{
-
-  z-index: 99;
-
-}
-.modal-content{
-  border-radius: 20px;
+.full-post .modal-content{
   padding: 27px 32px;
-  width: 100%; /*34.72%*/
+  //border-radius: 20px;
+  width: 100%;
   height: 673px;
 }
 .full-post__text{
