--- a/src/components/create-post/style/create-post.scss
+++ b/src/components/create-post/style/create-post.scss
@@ -1,14 +1,16 @@
-.create-post{
+.create-post .modal-content{
   position: absolute;
-  left: 22%;
+  left: -12%;
   top: 7%;
-  width: 55.34%;
-  height: 680px;
+  width: 150%;
+  //height: 680px;
+  overflow: hidden;
   background: #FFFFFF;
   border-radius: 20px;
   z-index: 1;
   padding: 32px;
   display: grid;
+  grid-row-end: 20px;
   grid-column-gap: 50px;
   grid-template-rows: 8% 30% 13% 16% 19% 12%;
   grid-template-columns: repeat(2, 45%);
@@ -28,7 +30,6 @@
 }
 .create-post__type{
   grid-area: t;
-  font-family: Muller;
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -63,7 +64,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
- // justify-content: center;
   background: #F8F8F8;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
@@ -112,11 +112,10 @@
   background: #FD5A01;
 }
 .create-post__form-title{
-  font-family: Muller;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
-  line-height: 20px;
+  //line-height: 20px;
   color: #424141;
   padding-bottom: 3px;
 }
