--- a/src/components/pop-up/popup-logout/style/logout.css
+++ b/src/components/pop-up/popup-logout/style/logout.css
@@ -1,5 +1,19 @@
 .logout-content .modal-content {
   border-radius: 20px;
-  width: 500px;
-  height: 300px;
+}
+
+button.logout__yes.btn.btn-primary {
+  background-color: #FD5A01;
+  border: none;
+}
+button.logout__yes.btn.btn-primary:hover {
+  opacity: 0.8;
+}
+
+button.logout__no.btn.btn-primary {
+  background-color: #202A49;
+  border: none;
+}
+button.logout__no.btn.btn-primary:hover {
+  opacity: 0.8;
 }
