--- a/src/components/sidebar/style/sidebar.scss
+++ b/src/components/sidebar/style/sidebar.scss
@@ -1,5 +1,6 @@
 $font-family: Muller;
 .sidebar {
+  overflow: hidden;
   display: grid;
   position: relative;
   padding-left: 32px;
@@ -24,6 +25,104 @@ $font-family: Muller;
     width: 83%;
     border-bottom: 1px solid rgba(196, 196, 196, 0.23);
   }
+}
+.profile-sidebar{
+  display: grid;
+  overflow: hidden;
+  position: relative;
+  padding-left: 32px;
+  padding-top: 30px;
+  background-color: #202A49;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  grid-template-columns: repeat(1, 90%);
+  grid-template-rows: 2% 25% 12% 30% 10%;
+}
+.profile-sidebar__top{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(196, 196, 196, 0.23);
+}
+.profile-sidebar__user-info{
+  margin-top: 50px;
+}
+.profile-sidebar__name{
+  //align-self: center;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 36px;
+  color: #FFFFFF;
+}
+.profile-sidebar__detail{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 18px;
+  color: rgba(255, 255, 255, 0.5);
+  margin-bottom: 10px;
+}
+.profile-sidebar__detail-text{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 170%;
+  color: rgba(255, 255, 255, 0.5);
+}
+.profile-sidebar__status{
+  display: grid;
+  align-content: center;
+  border-bottom: 1px solid rgba(196, 196, 196, 0.23);
+}
+.profile-sidebar__cancellation{
+  margin-bottom: 3%;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 18px;
+  color: #FFFFFF;
+  label{
+    font-weight: bold;
+    color: #FD5A01;
+  }
+}
+.profile-sidebar__points{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 26px;
+  color: #FD5A01;
+}
+.profile-sidebar__about{
+  padding: 4% 0 4% 0;
+  display: grid;
+  align-content: space-around;
+  border-bottom: 1px solid rgba(196, 196, 196, 0.23);
+}
+.profile-sidebar__about-me{
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+  color: #FFFFFF;
+}
+.profile-sidebar__buttons{
+  display: grid;
+  align-content: center;
+  justify-content: center;
+}
+.profile-sidebar__update{
+  background: #FD5A01;
+  border-radius: 12px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 18px;
+  color: #FFFFFF;
+  border: 1px solid #FD5A01;
+  padding: 14px 60px;
+
 }
 .sidebar__item-logo {
   grid-area: l;
