review full to modal popup

--- a/src/components/in-progress/inprogress-post/style/inprogress-post.css
+++ b/src/components/in-progress/inprogress-post/style/inprogress-post.css
@@ -3,3 +3,25 @@
   height: 24px;
   opacity: 0.5;
 }
+
+.in-progress__requester {
+  font-weight: 500;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 14px;
+  color: #03D031;
+}
+
+.inprogress__post-type {
+  display: flex;
+  justify-content: space-between;
+}
+
+.inprogress__more-btn {
+  border: none;
+  outline: none;
+  background-color: #FFFFFF;
+}
+.inprogress__more-btn:focus {
+  outline: none;
+}
