--- a/src/components/reviews/full-review/style/full-review.scss
+++ b/src/components/reviews/full-review/style/full-review.scss
@@ -1,9 +1,8 @@
-.full-review{
+.full-review .modal-content{
   position: absolute;
-  left: 40%;
-  top: 22%;
-  width: 30.6%;
-  //height: 673px;
+  left: 20%;
+  //top: 22%;
+  width: 80%;
   background: #FFFFFF;
   border-radius: 20px;
   z-index: 99;
