--- a/src/components/popup-terms/style/terms-conditions.css
+++ b/src/components/popup-terms/style/terms-conditions.css
@@ -1,17 +1,13 @@
-.terms-conditions {
-  position: absolute;
-  left: 23%;
+.terms-conditions .modal-content {
   top: 13%;
-  width: 55%;
-  height: 819px;
+  width: 150%;
+  height: 600px;
   background: #FFFFFF;
   border-radius: 20px;
-  z-index: 1;
   padding: 32px;
 }
 
 .terms__title {
-  font-family: Muller;
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
