--- a/src/components/popup-support/style/support.css
+++ b/src/components/popup-support/style/support.css
@@ -1,11 +1,8 @@
-.support {
-  position: absolute;
-  left: 27%;
-  top: 96%;
-  width: 28%;
+.support .modal-content {
+  bottom: -200px;
+  width: 80%;
   background: #FFFFFF;
   border-radius: 20px;
-  z-index: 1;
   padding: 32px;
 }
 
