--- a/src/components/popup-support/style/support.scss
+++ b/src/components/popup-support/style/support.scss
@@ -1,11 +1,11 @@
-.support{
-  position: absolute;
-  left: 27%;
-  top: 96%;
-  width: 28%;
+.support .modal-content{
+  //position: absolute;
+  //left: 27%;
+  //top: 96%;
+  bottom: -200px;
+  width: 80%;
   background: #FFFFFF;
   border-radius: 20px;
-  z-index: 1;
   padding: 32px;
 }
 .form-control{
