--- a/src/components/pop-up/popup-logout/style/logout.css
+++ b/src/components/pop-up/popup-logout/style/logout.css
@@ -9,6 +9,9 @@ button.logout__yes.btn.btn-primary {
 button.logout__yes.btn.btn-primary:hover {
   opacity: 0.8;
 }
+button.logout__yes.btn.btn-primary:active {
+  background-color: #FD5A01;
+}
 
 button.logout__no.btn.btn-primary {
   background-color: #202A49;
@@ -16,4 +19,7 @@ button.logout__no.btn.btn-primary {
 }
 button.logout__no.btn.btn-primary:hover {
   opacity: 0.8;
+}
+button.logout__no.btn.btn-primary:active {
+  background-color: #202A49;
 }
