--- a/src/components/pop-up/popup-logout/style/logout.scss
+++ b/src/components/pop-up/popup-logout/style/logout.scss
@@ -7,11 +7,17 @@ button.logout__yes.btn.btn-primary{
   &:hover{
     opacity: 0.8;
   }
+  &:active{
+    background-color: #FD5A01;
+  }
 }
 button.logout__no.btn.btn-primary{
   background-color: #202A49;
   border: none;
   &:hover{
     opacity: 0.8;
+  }
+  &:active{
+    background-color: #202A49;
   }
 }
