--- a/src/components/popup-support/style/support.scss
+++ b/src/components/popup-support/style/support.scss
@@ -2,7 +2,7 @@
   //position: absolute;
   //left: 27%;
   //top: 96%;
-  bottom: -200px;
+  bottom: 20%;
   width: 80%;
   background: #FFFFFF;
   border-radius: 20px;
