--- a/src/components/create-post/style/create-post.scss
+++ b/src/components/create-post/style/create-post.scss
@@ -49,7 +49,7 @@
     "ttl ds"
     "b b";
 }
-.create-post .form-control{
+.form-control{
   background: #F8F8F8;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
@@ -156,3 +156,6 @@
   color: #424141;
   margin-left: 5px;
 }
+//.form-control select{
+//  width: 200px;
+//}
