dates error fixed, create post provider delivery

--- a/src/components/create-post/style/create-post.css
+++ b/src/components/create-post/style/create-post.css
@@ -17,6 +17,30 @@
   grid-template-areas: "t t" "lf lt" "dt dt" "ttl ds" "p p" "b b";
 }
 
+.create-provide-delivery .modal-content {
+  position: absolute;
+  left: -12%;
+  top: 7%;
+  width: 150%;
+  overflow: hidden;
+  background: #FFFFFF;
+  border-radius: 20px;
+  z-index: 1;
+  padding: 32px;
+  display: grid;
+  align-content: space-between;
+  justify-content: space-between;
+  grid-column-gap: 50px;
+  grid-template-rows: 8% 32% 32% 20% 8%;
+  grid-template-columns: repeat(2, 45%);
+  grid-template-areas: "t t" "lf lt" "dt dt" "ttl ds" "b b";
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
 .create-post-airport .modal-content {
   position: absolute;
   left: -12%;
@@ -55,6 +79,12 @@
   color: #202A49;
 }
 
+.create-provide-delivery .modal-content > .create-post__type {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+}
+
 .create-post-airport .modal-content > .create-post__type {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
@@ -67,6 +97,11 @@
   grid-area: lf;
 }
 
+.create-provide-delivery .modal-content > .create-post__location-from {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+}
+
 .create-post-airport .modal-content > .create-post__location-from {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
@@ -76,6 +111,11 @@
   -ms-grid-row: 2;
   -ms-grid-column: 3;
   grid-area: lt;
+}
+
+.create-provide-delivery .modal-content > .create-post__location-to {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;
 }
 
 .create-post-airport .modal-content > .create-post__location-to {
@@ -91,6 +131,12 @@
   display: inline-block;
 }
 
+.create-provide-delivery .modal-content > .create-post__date {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+}
+
 .create-post-airport .modal-content > .create-post__date {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
@@ -103,6 +149,11 @@
   grid-area: ttl;
 }
 
+.create-provide-delivery .modal-content > .create-post__title {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+}
+
 .create-post-airport .modal-content > .create-post__title {
   -ms-grid-row: 4;
   -ms-grid-column: 1;
@@ -112,6 +163,11 @@
   -ms-grid-row: 4;
   -ms-grid-column: 3;
   grid-area: ds;
+}
+
+.create-provide-delivery .modal-content > .create-post__description {
+  -ms-grid-row: 4;
+  -ms-grid-column: 3;
 }
 
 .create-post-airport .modal-content > .create-post__description {
@@ -175,6 +231,12 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+}
+
+.create-provide-delivery .modal-content > .create-post__buttons {
+  -ms-grid-row: 5;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
 }
 
 .create-post-airport .modal-content > .create-post__buttons {
