--- a/src/components/create-post/style/create-post.scss
+++ b/src/components/create-post/style/create-post.scss
@@ -24,6 +24,35 @@
     "p p"
     "b b";
 }
+.create-provide-delivery .modal-content{
+  position: absolute;
+  left: -12%;
+  top: 7%;
+  width: 150%;
+  //height: 680px;
+  overflow: hidden;
+  background: #FFFFFF;
+  border-radius: 20px;
+  z-index: 1;
+  padding: 32px;
+  display: grid;
+  align-content: space-between;
+  justify-content: space-between;
+  //grid-row-end: 20px;
+  grid-column-gap: 50px;
+  grid-template-rows: 8% 32% 32% 20% 8%;
+  grid-template-columns: repeat(2, 45%);
+  grid-template-areas:
+    "t t"
+    "lf lt"
+    "dt dt"
+    "ttl ds"
+    "b b";
+}
+ul{
+  list-style: none;
+  padding: 0;
+}
 .create-post-airport .modal-content{
   position: absolute;
   left: -12%;
