terms on registration add

--- a/src/components/popup-terms/style/terms-conditions.scss
+++ b/src/components/popup-terms/style/terms-conditions.scss
@@ -1,6 +1,6 @@
 .terms-conditions .modal-content{
   //position: absolute;
-  //left: 23%;
+  left: -15%;
   top: 13%;
   width: 150%;
   height: 600px;
