--- a/src/components/sidebar/style/sidebar.scss
+++ b/src/components/sidebar/style/sidebar.scss
@@ -45,6 +45,7 @@ $font-family: Muller;
   border-bottom: 1px solid rgba(196, 196, 196, 0.23);
 }
 .profile-sidebar__user-info{
+  padding-left: 10%;
   margin-top: 50px;
 }
 .profile-sidebar__name{
