--- a/src/components/dashboard/style/main.css
+++ b/src/components/dashboard/style/main.css
@@ -18,7 +18,6 @@
 .dashboard__title {
   margin-left: 7.8%;
   margin-right: auto;
-  font-family: Muller;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -29,6 +28,9 @@
 .dashboard__list {
   list-style: none;
   margin-right: 7%;
+}
+.dashboard__list a:hover {
+  text-decoration: none;
 }
 
 .dashboard__list-item {
@@ -41,6 +43,9 @@
   margin-left: 48px;
   display: inline;
   color: #000000;
+}
+.dashboard__list-item:hover {
+  text-decoration: none;
 }
 
 .dashboard__label {
@@ -82,7 +87,6 @@
   border: 1px solid #FD5A01;
   background: #FD5A01;
   border-radius: 12px;
-  font-family: Muller;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
