--- a/src/components/reviews/full-review/style/full-review.css
+++ b/src/components/reviews/full-review/style/full-review.css
@@ -36,6 +36,8 @@
 }
 
 .full-review__image {
+  position: relative;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   width: 96%;
@@ -44,4 +46,10 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   border-radius: 6px;
+}
+
+.full-review__image-item {
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
