--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -24,7 +24,7 @@ $font-color-orange: #FD5A01;
 }
 .card{
   width: 93%;
-  //height: 224px;
+  height: 224px;
   margin-bottom: 4%;
   background-color: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
@@ -32,11 +32,11 @@ $font-color-orange: #FD5A01;
   display: block !important;
   padding: 16px;
   cursor: pointer;
+  overflow: hidden;
   &:hover{
     opacity: 0.8;
   }
 }
-
 .post__top-list{
   display: flex;
   padding: 0 0 9px 0;
@@ -56,12 +56,22 @@ $font-color-orange: #FD5A01;
   border-radius: 50%;
   margin-right: 11px;
 }
+.post_avatar-empty{
+  align-self: center;
+  width: 35px;
+  height: 35px;
+  padding: 5px;
+  background-color: #666666;
+  border-radius: 50%;
+  filter: invert(66%) sepia(0%) saturate(609%) hue-rotate(187deg) brightness(107%) contrast(98%);
+}
 .post__user-name{
   @include font(18px, normal, bold, 18px, #000000);
   margin: 0;
 }
 
 .post__top-list-item{
+  //position: relative;
   padding: 0;
   margin: 0;
 }
