--- a/src/components/profile/style/profile.scss
+++ b/src/components/profile/style/profile.scss
@@ -17,6 +17,17 @@
   color: #000000;
   padding-top: 2%;
 }
+.profile__list-item{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+  color: black;
+  &:hover{
+    color: #FD5A01;
+    text-decoration: none;
+  }
+}
 .profile__list-item_active{
   position: relative;
   color: #FD5A01;
